--- a/src/containers/Canvas/Test/TestSidebar.css
+++ b/src/containers/Canvas/Test/TestSidebar.css
@@ -20,7 +20,8 @@
     -webkit-transition: -webkit-transform .3s;
     -moz-transition: -moz-transform .3s;
     transition: transform .3s;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 #Timeline{
